--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,25 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
+    ext{
+        version_retrofit = "2.9.0"
+        version_moshi = "1.9.3"
+        version_core = "1.3.1"
+        version_coroutine = "1.3.7"
+        kotlin_version = "1.5.10"
+        nav_version = "2.3.5"
+        lottieVersion = "3.7.0"
+        version_lifecycle_extensions = "2.2.0"
+        version_lifecycle = "2.2.0"
+    }
+
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.0"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.21"
 
         // NOTE: Do not place your application dependencies here; they belong
