--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,6 @@ dependencies {
     //3rd party libraries
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.0.0'
+
 }
