--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         minSdk 23
         targetSdk 30
         versionCode 1
-        versionName "1.5"
+        versionName "1.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -69,5 +69,6 @@ dependencies {
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
+    implementation "com.airbnb.android:lottie:$lottieVersion"
 
 }
