--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,5 +70,6 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.0'
     implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
