--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures{
+    buildFeatures {
         dataBinding = true
     }
 }
@@ -71,5 +71,8 @@ dependencies {
     implementation 'com.github.mukeshsolanki:android-otpview-pinview:2.1.2'
     implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //mono sdk
+    implementation 'com.github.withmono:mono-connect-android:v1.0.2'
 
 }
