--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,13 +8,18 @@ plugins {
 
 android {
     compileSdk 31
-
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
+    }
     defaultConfig {
         applicationId "com.adashi.escrow"
         minSdk 23
         targetSdk 31
-        versionCode 1
-        versionName "2.0"
+        versionCode 2
+        versionName "3.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
